--- a/poster_slidy.Rmd
+++ b/poster_slidy.Rmd
@@ -1,30 +1,34 @@
 ---
-title: "Untitled"
-output: slidy_presentation
+title: "Environmental Quality and Socioeconomic Status"
+output: 
+  slidy_presentation
+
+
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+library(slidify)
 ```
+ 14.32
+## Question 
+What relationship does environmental quality, such as air pollution, water pollution, and tree cover, have with socioeconomic indicators such as education levels and income in US counties?
 
-#### Question 
-Does environmental quality such as air pollution, water pollution, and tree cover have a relationship with education levels for US counties?
-
-##### Data Sources  
+## Data Sources  
 - Education & income: USDA Economic Research Services  
 - Air quality: Centers for Diseas Control and Prevention
 - Tree cover: USDA Forest Service
 
-#### Key Variables  
+## Key Variables  
 - Education: Education attainment level in adults, ratio of above high school education and high school completion or below (2015)
 - Income: Median houseshold income (2015)
 - Air quality: Concentration of particulate matter 2.5
 - Tree cover: Percent area tree cover
 
-##### Methoods
+## Methoods
 From classs: tidyr, dplyr, reading html, for loops for downloading and compiling data, linear regression, ggplot   
 Outside class: readxl, spatial data, leaflet interactive map
-
+---
 
 # Slide with R Output
 
