--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -399,7 +399,7 @@ Load the filepaths if you're using the downloaded files
 #' 
 #' @param AllStates data frame that contains stateNames and downloadLinks
 #' @return Data frame with stateNames, downloadLinks, and fileLocations 
-<<<<<<< Updated upstream
+
 LoadFilepaths <- function(AllStates, userName){
   if(userName == "K"){
     AllStates$fileLocations <- paste("C:\\Users\\kanay\\Documents\\R\\stat133\\AllStates\\", AllStates$stateNames, ".xls", sep = "")
@@ -413,10 +413,7 @@ LoadFilepaths <- function(AllStates, userName){
     AllStates$fileLocations <- paste("C:\\Users\\Katrlyn\\stats133Project\\AllStates\\", AllStates$stateNames, ".xls", sep = "")
   }
   
-=======
-LoadFilepaths <- function(AllStates){
-  AllStates$fileLocations <- paste("/Users/anishakumar/Documents/Stats133/RStudioFiles/Stats133Project/AllStates/", AllStates$stateNames, ".xls", sep = "")
->>>>>>> Stashed changes
+
   return(AllStates)
 }
 
@@ -539,15 +536,13 @@ Joining all datatables
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 ```{r}
-<<<<<<< Updated upstream
+
 #-------USER--------
 # READ BELOW BEFORE RUNNING
 #--------------------
 #Put the first initial of your first name.
-userName = "v"
-=======
+userName = "V"
 
->>>>>>> Stashed changes
 
 all_data=NULL
 
