--- a/Arsenic.Rmd
+++ b/Arsenic.Rmd
@@ -265,6 +265,9 @@ all_data_arsenic <- all_data %>%
 
 all_data_arsenic$coll_HS[all_data_arsenic$coll_HS >= 5] <- NA
 all_data_arsenic$arsenic[all_data_arsenic$arsenic > 100] <- NA
+all_data_arsenic$State <- as.factor(all_data_arsenic$State)
+all_data_arsenic$StateFips <- as.factor(all_data_arsenic$FIPSCode)
+all_data_arsenic$UrbanCode <- as.factor(all_data_arsenic$UrbanCode)
   
 ```
 
@@ -273,11 +276,12 @@ all_data_arsenic$arsenic[all_data_arsenic$arsenic > 100] <- NA
 
 air_edu_boxplot <- all_data_arsenic %>%
   ggplot(aes(Pollution, Bachelors)) +
-  geom_boxplot(aes(color = IncomeQuartile), size = 1) +
-  geom_point(aes(color = IncomeQuartile), alpha = 0.3, size = 2) +
-  scale_color_manual(values = c("#6baed6","#4292c6","#2171b5","#084594")) +
+  geom_boxplot(aes(color = UrbanCode), size = 1) +
+  geom_point(aes(color = UrbanCode), alpha = 0.3, size = 2) +
+  #scale_color_manual(values = c("#6baed6","#4292c6","#2171b5","#084594")) +
   geom_smooth(method = "lm") +
-  facet_grid( ~ IncomeQuartile) +
+  #facet_grid( ~ IncomeQuartile) +
+  facet_grid(~ UrbanCode)
   labs(x="Concentration of PM 2.5 (ug/m^3)", y="% Adults with Bachelor's Degrees") +
   theme_bw()
 
