--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -33,26 +33,43 @@ includeSourceDocuments()
 Downloading the USACountyEduAttainment data
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ```{r}
-#download/wrangle the USACountyEduAttainment data
+#' @Variables of interest: UrbanRank (Anisha is currently  making it) and Bachelors (%) 
+#' @Year 2013 Rural-Urban Continuum Codes, 2011-2015 Education Attainment
+
+#' Scrapes the excel download link for US County Education Attainment
+#' Source: "https://www.ers.usda.gov/data-products/county-level-data-sets/county-level-data-sets-download-data.aspx" and click Educational attainment for the U.S., States, and counties, 1970-2015
+#'
+#' @return The edu_data that contains the FIPSCode, UrbanCode (2013 Rural-Urban Continuum Code), LessThanHS (%), HSDiploma (%), Bachelors (%), UrbanRank. 
 
 GetEduData <- function(){
   
-  #Download and read data
+  #Use downoload link to read the data
   url <- "https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Education.xls?v=42762"
+  #tmp is a temporary file in which the data from the excel sheet is stored 
   tmp <- tempfile(fileext=".xls")
   download.file(url, destfile=tmp, mode="wb")
+  #read data from sheet 1 beginning at row 5
   edu_data_unclean <- read_excel(tmp, sheet = 1, skip = 4)
   
+  #Get rid of the temporary file tmp
   unlink(tmp)
   
   #Wrangle and select variables
-  #2013 Rural Urban Continuum code
-  edu_data<-edu_data_unclean[, grep("2011|FIPS Code|2013 Rural", colnames(edu_data_unclean))]
+  
+  #Choose the columns from edu_data_clean that has FIPS Code, 2013 Rural-Urban Continuum Code and any columns that have information from 2011
+  edu_data<-edu_data_unclean[, grep("2011|FIPS Code|2013 Rural", colnames(edu_data_unclean))] 
+  
+  #Choose columns from edu_data taht has FIPSCode, 2013 Rural-Urban Continuum Code and Percent
   edu_data<-edu_data[, grep("Percent|FIPS Code|2013 Rural", colnames(edu_data))]
+  
+  #Rename FIPS Code column to FIPSCode
   edu_data<-edu_data%>%dplyr::rename(FIPSCode=`FIPS Code`)
+  
+  #Rename the columns so that they are cleaner 
   colnames(edu_data)<-c('FIPSCode', 'UrbanCode', 'LessThanHS', 'HSDiploma', 'SomeCollege','Bachelors')
+  
   edu_data<-edu_data%>%mutate(coll_HS = (SomeCollege + Bachelors)/(LessThanHS + HSDiploma))%>%filter(coll_HS<5)
-  return(edu_data)
+  
 }
 
 
@@ -542,7 +559,7 @@ Joining all datatables
 # READ BELOW BEFORE RUNNING
 #--------------------
 #Put the first initial of your first name.
-userName = "V"
+userName = "A"
 
 
 all_data=NULL
