--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -175,53 +175,40 @@ Downloading the USCountyUrbanForest data
 
 The purpose of this document is to extract urban forest from all the counties in the U.S.
 
-
-
 ```{r}
 #' Scrapes the excel download link for each state in the U.S.
 #'
 #' @return A data frame containing variables: stateNames and downloadLinks (Excel file download links)
 
 Webscrape <- function(){
-  
   #----------------------------------------------
   #Scrape the link to each state from the US data
   #----------------------------------------------
-
   library(XML)
   library(RCurl)
   library(readxl)
-  
   URL <- "https://www.nrs.fs.fed.us/data/urban/"
   txt <- getURLContent(URL)
   doc <- htmlParse(txt)
-  
   #Scrape the state name
   stateNames <- xpathSApply(doc, '//ul/li/a/strong', xmlValue)
-  
   #Scrape the state link
   stateLinks <- xpathSApply(doc, '//ul[@class="state_list"]/li/a/@href')
   baseURL <- "https://www.nrs.fs.fed.us"
   stateLinks <- paste(baseURL,as.character(stateLinks),sep="")
-  
   #Data Frame of StateName and stateLink
   AllStates <- data.frame(stateNames, stateLinks, stringsAsFactors = FALSE)
-
   #Fix naming conventions standard Washington DC --> District of Columbia
   AllStates$stateNames[AllStates$stateNames == "Washington, D.C"] <- "District of Columbia"
-  
   #-------------------------------------------------------
   #Scrape the state xls file download link from each state page
   #-------------------------------------------------------
-  
   downloadLinks <- vector(mode="character", length=length(AllStates$stateNames))
-  
   for (i in 1:length(stateLinks)){
     stateURL<- stateLinks[i]
     stateTxt <- getURLContent(stateURL)
     stateDoc <- htmlParse(stateTxt)
     downloadLink <- xpathSApply(stateDoc, '//ol[@id="data_options"]/li/a/@href')
-  
     #The HTML source code is poor so need to use grepl to extract .xls from Xpath results
     length(downloadLink)
     for (j in 1:length(downloadLink)){
@@ -231,28 +218,23 @@ Webscrape <- function(){
       }
     }
   }
-  
   # Add to dataframe
   AllStates$downloadLinks <- downloadLinks
-  
   # Return only the relevant part of the database
   AllStates <- AllStates %>% select(stateNames, downloadLinks)
-  
   return(AllStates)
 }
 
 ```
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Downloading and loading Excel files 
+Support functions for Downloading and loading state Excel files 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-
-All the support functions:
-
 ```{r}
-#' Creates a reference dataframe that maps county name to FIPS code based on the 2010 census, with naming updates up to 2015.
-
+#' Creates a reference dataframe that maps county name to FIPS code based on the 2010 census, 
+#' with naming updates up to 2015.
+#'
 #' @param state (optional) to restrict FIPS codes to one state
 #' @return A data frame containing variables: State, CountyName, and FIPS (FIPS code)
 
@@ -260,49 +242,34 @@ FIPS_fun <- function(state = NA){
   #Note: colClasses = "character" helps keep the leading 0s
   #http://stackoverflow.com/questions/17414776/read-csv-warning-eof-within-quoted-string-prevents-complete-reading-of-file
   df <- read.table("https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt", sep = ",", col.names = c("State", "StateFIPS", "CountyFIPS", "CountyName", "ClassFIPSCode" ), colClasses = "character", quote = "")
-  
   #Shannon County (46-113) change to Oglala Lakota County (46-102) (Effective 2015)
   df2 <- data.frame(State = "SD", StateFIPS = "46", CountyFIPS = "102", CountyName = "Oglala Lakota County", ClassFIPSCode = "H1")
   df <- rbind(df, df2)
-  
   #Merge state and county into one FIPS code
   FIPS_base <- df %>% mutate(FIPS = paste(StateFIPS, CountyFIPS, sep = ""))
-  
   #Delete Shannon County (It changed to Oglala Lakota)
   FIPS_base <- FIPS_base %>% filter(FIPS != "46113")
-  
   #return FIPS codes of the state passed in
   if(!is.na(state)){
     FIPS_base <- FIPS_base %>% subset(State == state) %>% select(State, CountyName, FIPS)
     return(FIPS_base)
   }else{return(FIPS_base)}
-  
 }
-
 ```
 
-
 ```{r}
-#' Extracts data from an excel file relating to the:
-#' Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
+#' Extracts data from an excel file relating to the forestry variables of interest.
+#' @Variables: Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
 #' for each county in the state. This data, along with the county name and the FIPS code is returned as a data frame.
 
 #' @param file Location of the state .xls file
+#' @param stateAbbrev the state postal code for the count of interest
 #' @return A data frame containing variables: State, CountyName, FIPS (FIPS code), TreeCanopy, AvailGreenSpace, and TreeCanopyCover
 
 ExtractStateData <- function(file, stateAbbrev){
-  
   # ---------------------------------------------
   # Read-in relevant sheets from the excel files
   # ---------------------------------------------
-  # Known bugs: NC 7th sheet is actually sheet 8.
-  # Solution: sheet = string instead of sheet = integer when reading the excel file.
-  # Known Bug: DC has fewer sheets.
-  # Solution: various fixes changing DC to District of Columbia and reading sheet 5 & 8 instead. 
-  
-  #tmp = "C:\\Users\\kagex\\stats133Project\\AllStates\\Illinois.xls"
-  #stateAbbrev = "IL"
-  
   if(stateAbbrev == "DC"){
     xl_7 <- read_excel(file, sheet = "5", skip = 3)
     xl_10 <- read_excel(file, sheet = "8", skip = 4) 
@@ -310,34 +277,27 @@ ExtractStateData <- function(file, stateAbbrev){
     xl_7 <- read_excel(file, sheet = "7", skip = 3)
     xl_10 <- read_excel(file, sheet = "10", skip = 3)
   }
-  
   # -----------------------------------
   # Clean and select relevant variables
   # -----------------------------------
-  
   xl_7 <- xl_7 %>% select(c(`X__1`, `m2/person__1`, `Available green space (ha)`))
   #Units: Tree canopy Covering (m2/person), Available green space (ha)
   colnames(xl_7) <- c("CountyName","TreeCanopy", "AvailGreenSpace")
-  
   xl_10 <- xl_10 %>% select(c(`X__1`, `Tree % h`))
   #Tree canopy cover in developped regions (%)
   colnames(xl_10) <- c("CountyName", "TreeCanopyCover")
-  
   #Exclude the variable descriptions at the end of the sheet
   xl_10 <- na.omit(xl_10)
-  
+  # --------
+  # Join
+  # --------
   #Join the two excel sheets to create one datframe of county data
   joined <- full_join(xl_7, xl_10, by = "CountyName")
   #get ride of statewide summary row
   joined_clean <- joined %>% subset(CountyName != "Statewide")
-  
-  #Add column of state Abbreviations to assist debugging later
-  #joined_clean$StateAbb <- rep(stateAbbrev, times = length(joined_clean$CountyName))
-  
   # ------------------
   # Naming Corrections:
   # -----------------
-
   # 1) Washington DC must be called District of Columbia to find FIPS code
   # 2) La Salle county in IL changed to LaSalle County in 2001 
   # 3) Clifton Forge city is no longer a county as of 2001
@@ -353,11 +313,9 @@ ExtractStateData <- function(file, stateAbbrev){
   }else if(stateAbbrev == "SD"){
     joined_clean$CountyName[joined_clean$CountyName == "Shannon County"] <- "Oglala Lakota County"
   }
-  
   # Add FIPS codes to data
   FIPS_base <- FIPS_fun(state = stateAbbrev)
   final_df <- full_join(joined_clean, FIPS_base, by = "CountyName")
-  
   return(final_df)
 }
 
@@ -365,30 +323,24 @@ ExtractStateData <- function(file, stateAbbrev){
 
 To keep from wasting time redownloading files, use this code to download once and use your local files. 
 ```{r, eval=FALSE}
-#' Downloads excel files to a local directory for later extraction and cleaning. 
+#' Downloads excel files to a local directory for later extraction and cleaning. Note that the user will need to 
+#' manually designate the desired download directory.
 #' 
 #' @param AllStates data frame that contains stateNames and downloadLinks
 #' @return Data frame with stateNames, downloadLinks, and fileLocations 
 
 DownloadLocally <- function(AllStates){
-  
   library(readxl)
-  
   #Stores locations for future file reading
   fileLocations <- vector(mode="character", length=length(AllStates$stateNames))
-  
   #Download file for each state
   for(i in 1:length(AllStates$stateNames)){
     destination <- paste("~/Downloads/stats133data/AllStates/", AllStates$stateNames[i], ".xls", sep = "")
-    
     download.file(AllStates$downloadLinks[i], destfile = destination, mode = "wb" )
-    
     fileLocations[i] <- destination
   }
-  
   AllStates$fileLocations <- fileLocations
   return(AllStates)
-  
 }
 
 ```
@@ -396,6 +348,7 @@ DownloadLocally <- function(AllStates){
 Load the filepaths if you're using the downloaded files
 ```{r}
 #' Loads the locations of all the excel files stored in a local directory for later extraction and cleaning. 
+#' Note that the user will need to designate the directory of their downloaded file.
 #' 
 #' @param AllStates data frame that contains stateNames and downloadLinks
 #' @return Data frame with stateNames, downloadLinks, and fileLocations 
@@ -412,17 +365,22 @@ LoadFilepaths <- function(AllStates, userName){
   }else{
     AllStates$fileLocations <- paste("C:\\Users\\Katrlyn\\stats133Project\\AllStates\\", AllStates$stateNames, ".xls", sep = "")
   }
-  
-
   return(AllStates)
 }
 
 ```
 
 ------------------------------------------------------
-Main code (Method 1: Download all the files locally)
+Download Tree Data  (Method 1: Download all the files locally)
 ------------------------------------------------------
 ```{r}
+#' Scrapes the download link for each state's forestry data and then extracts forestry data for each county.
+#' Source: https://www.nrs.fs.fed.us/data/urban/
+#' @Variables: Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
+#' for each county in the state. This data, along with the county name and the FIPS code is returned as a data frame.
+#'
+#' @return A data frame containing county name, FIPS code, tree canopy per person, available green space, and 
+#' tree canopy cover in developped areas.
 
 GetTreeData <- function(userName){
   #Webscrape the data links from the USDA Forest Service
@@ -456,11 +414,7 @@ GetTreeData <- function(userName){
     }else{
       df_full <- rbind(df_full, state_df)
     }
-    #unlink(tmp)
-    
   }
-  
-  View(df_full)
   
   #Things that need fixing still
   df <- df_full %>% subset(is.na(FIPS) | is.na(TreeCanopy))
@@ -470,8 +424,8 @@ GetTreeData <- function(userName){
   ###### MY CODE  SO THAT I CAN JOIN THE TREE DATA TO MY OTHER DATA FOR THE SCATTERPLOTS######
   #-------------------------------------------------------------------------------------------
   tree_data<-df_full[, -grep("State|Name", colnames(df_full))]
+  #Filter out outlier values?
   tree_data<-tree_data%>%rename(FIPSCode=FIPS)%>%filter(TreeCanopyCover<.55)
-  
   return(tree_data)
 }
 
@@ -480,59 +434,72 @@ GetTreeData <- function(userName){
 
 
 ------------------------------------------------------
-Main code (Method 2: Download via temporary files)
+Download Tree Data (Method 2: Download via temporary files)
 ------------------------------------------------------
 
 
 ```{r, eval=FALSE}
-#Webscrape the data links from the USDA Forest Service
-#The original data source is: https://www.nrs.fs.fed.us/data/urban/ 
+#' Scrapes the download link for each state's forestry data and then extracts forestry data for each county.
+#' Source: https://www.nrs.fs.fed.us/data/urban/
+#' @Variables: Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
+#' for each county in the state. This data, along with the county name and the FIPS code is returned as a data frame.
+#'
+#' @return A data frame containing county name, FIPS code, tree canopy per person, available green space, and 
+#' tree canopy cover in developped areas.
 
-AllStates <- Webscrape()
+GetTreeDataTEMP <- function(){
 
-#Download via temp files (no local storage on hard drive )
-
-for(i in 1:length(AllStates$downloadLinks)){
-  #Download xls file
-  url <- AllStates$downloadLinks[i]
-  tmp <- tempfile(fileext=".xls")
-  download.file(url,destfile=tmp, mode="wb")
+  AllStates <- Webscrape()
   
-  #Extract urban forestry for each state in the United States
-  print(AllStates$stateNames[i])
-  #Get the current state postal abbreviation 
-  if(AllStates$stateNames[i] == "District of Columbia"){
-    stateAbbrev <- "DC"
-  }else{
-    stateAbbrev <- state.abb[match(AllStates$stateNames[i],state.name)]
+  #Download via temp files (no local storage on hard drive )
+  
+  for(i in 1:length(AllStates$downloadLinks)){
+    #Download xls file
+    url <- AllStates$downloadLinks[i]
+    tmp <- tempfile(fileext=".xls")
+    download.file(url,destfile=tmp, mode="wb")
+    
+    #Extract urban forestry for each state in the United States
+    print(AllStates$stateNames[i])
+    #Get the current state postal abbreviation 
+    if(AllStates$stateNames[i] == "District of Columbia"){
+      stateAbbrev <- "DC"
+    }else{
+      stateAbbrev <- state.abb[match(AllStates$stateNames[i],state.name)]
+    }
+    
+    #Extract the variables Tree canopy Covering (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) for the current state
+    state_df <- ExtractStateData(tmp, stateAbbrev)
+    
+    #Build a data frame of all the states
+    if(i == 1){
+      df_base <- state_df
+    }else if( i == 2){
+      df_full <- rbind(df_base, state_df)
+    }else{
+      df_full <- rbind(df_full, state_df)
+    }
+    unlink(tmp)
   }
+  #Things that need fixing still
+  df <- df_full %>% subset(is.na(FIPS) | is.na(TreeCanopy))
+  df
   
-  #Extract the variables Tree canopy Covering (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) for the current state
-  state_df <- ExtractStateData(tmp, stateAbbrev)
-  
-  #Build a data frame of all the states
-  if(i == 1){
-    df_base <- state_df
-  }else if( i == 2){
-    df_full <- rbind(df_base, state_df)
-  }else{
-    df_full <- rbind(df_full, state_df)
-  }
-  unlink(tmp)
-
+  #-------------------------------------------------------------------------------------------
+  ###### MY CODE  SO THAT I CAN JOIN THE TREE DATA TO MY OTHER DATA FOR THE SCATTERPLOTS######
+  #-------------------------------------------------------------------------------------------
+  tree_data<-df_full[, -grep("State|Name", colnames(df_full))]
+  #Filter out outlier values?
+  tree_data<-tree_data%>%rename(FIPSCode=FIPS)%>%filter(TreeCanopyCover<.55)
+  return(tree_data)
 }
 
-View(df_full)
-
-#Things that need fixing still
-df <- df_full %>% subset(is.na(FIPS) | is.na(TreeCanopy))
-df
 ```
 
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Joining all datatables 
+Main Code: Acquire and Join all data
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 ```{r}
@@ -543,20 +510,20 @@ Joining all datatables
 #Put the first initial of your first name.
 userName = "V"
 
-
 all_data=NULL
 
+#Get reference table of counties to FIPS codes
 every_county <- GetCountyReference()
 
+#Acquire all data using support functions
 edu_data <- GetEduData()
 income_data <- GetIncomeData()
 poll_data <- GetPollutionData()
 tree_data <- GetTreeData(userName)
 
-
+#Join all data to prepare for visualization
 all_data<-plyr::join_all(list(every_county, edu_data, income_data, poll_data, tree_data), by='FIPSCode', type='full')
 all_data<-na.omit(all_data)
-
 
 head(all_data)
 
@@ -564,71 +531,5 @@ head(all_data)
 
 ```
 
-
-
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Scatterplots
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-```{r eval = FALSE}
-# use ggplot to make a scatter plot of education versus TREE DATA
-
-#all_data_narrow_tree<-all_data_narrow%>%gather(key=TreeType, value=TreeValue, TreeCanopy,AvailGreenSpace, TreeCanopyCover)
-edu_treecanop_plot<-all_data%>%
-  ggplot(aes(x=TreeCanopyCover, y=coll_HS))+
-  geom_point(aes(color=IncomeQuartile))+
-  facet_grid(.~IncomeQuartile)
-
-edu_treecanop_plot
-
-```
-
-```{r eval = FALSE}
-#use ggplot to plot edication data versus income data
-#edu_inc_plot<-all_dataw%>%
-  #ggplot(aes(x=PercentOfAdults, y=Income))+
-  #geom_point(aes(color=EducationLevel))+
-  #facet_grid(EducationLevel~.)
-#View(all_data_narrow)
-#edu_inc_plot
-```
-
-```{r eval = FALSE}
-
-#use ggplot to graph education versus pollution
-edu_poll_graph<-all_data%>%
-  filter(StateFips!=02)%>%
-  ggplot(aes(x=Pollution, y=coll_HS))+
-  geom_point(aes(color=IncomeQuartile))+
-  facet_grid(.~IncomeQuartile)
-
-edu_poll_graph  
-```
-
-```{r eval = FALSE}
-#Linear Regerssion Time......
-library(statisticalModeling)
-library(rpart)
-#install.packages("rpart.plot")
-library(rpart.plot)
-library(stats)
-library(mosaicData)
-
-#Tree reg
-et1<-lm(coll_HS~TreeCanopyCover, data=all_data)
-et2<-lm(coll_HS~TreeCanopyCover +Income, data=all_data)
-stargazer::stargazer(et1, et2, type="text",
- dep.var.labels=c("Ratio of People with Higher Education to Lower Education"),
- covariate.labels=c("Tree Canopy Cover","Median Income"), out="tree_edu.txt")
-
-#pollution regressions
-
-
-ep1<-lm(coll_HS~Pollution, data=all_data) 
-ep2<-lm(coll_HS~Pollution+Income, data=all_data) 
-
-stargazer::stargazer(ep1, ep2, type="text",
- dep.var.labels=c("Ratio of People with Higher Education to Lower Education"),
- covariate.labels=c("Particulate Matter","Median Income"), out="polution_edu.txt")
-```
 
 
